Initial commit: Professional Documents website with CV, Cover Letter, and academic results8888

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <p class="section-description">A detailed overview of my academic background, technical skills, and practical experience in mobile application development.</p>
                 <div class="document-viewer">
                     <!-- EMBED YOUR CV PDF HERE -->
-                    <iframe src="documents/sana-mehboob-cv.pdf" frameborder="0" title="Sana Mehboob CV"></iframe>
+                    <iframe src="documents/SANA MEHBOOB CV.pdf" frameborder="0" title="Sana Mehboob CV"></iframe>
                 </div>
                 <p class="text-center project-links">
-                    <a href="documents/sana-mehboob-cv.pdf" target="_blank" class="button-link">
+                    <a href="documents/SANA MEHBOOB CV.pdf" target="_blank" class="button-link">
                         <i class="fas fa-download"></i> Download CV (PDF)
                     </a>
                 </p>
@@ -65,10 +65,10 @@
                 <p class="section-description">A personalized introduction highlighting my interest in mobile application development and how my skills align with industry needs.</p>
                 <div class="document-viewer">
                     <!-- EMBED YOUR COVER LETTER PDF HERE -->
-                    <iframe src="documents/sana-mehboob-cover-letter.pdf" frameborder="0" title="Sana Mehboob Cover Letter"></iframe>
+                    <iframe src="documents/Sana Mehboob CoverLetter.pdf" frameborder="0" title="Sana Mehboob Cover Letter"></iframe>
                 </div>
                 <p class="text-center project-links">
-                    <a href="documents/sana-mehboob-cover-letter.pdf" target="_blank" class="button-link">
+                    <a href="documents/Sana Mehboob CoverLetter.pdf" target="_blank" class="button-link">
                         <i class="fas fa-download"></i> Download Cover Letter (PDF)
                     </a>
                 </p>
@@ -82,10 +82,10 @@
                 <p class="section-description">My academic transcript showcasing my performance and dedication throughout my BSIT program.</p>
                 <div class="document-viewer">
                     <!-- EMBED YOUR ACADEMIC RESULTS PDF HERE -->
-                    <iframe src="documents/academic-results.pdf" frameborder="0" title="Sana Mehboob Academic Results"></iframe>
+                    <iframe src="documents/SANAMEHBOOB_7THRESULT.pdf" frameborder="0" title="Sana Mehboob Academic Results"></iframe>
                 </div>
                 <p class="text-center project-links">
-                    <a href="documents/academic-results.pdf" target="_blank" class="button-link">
+                    <a href="documents/SANAMEHBOOB_7THRESULT.pdf" target="_blank" class="button-link">
                         <i class="fas fa-download"></i> Download Academic Results (PDF)
                     </a>
                 </p>
